--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "module-alias": "^2.2.0",
     "mongoose": "^5.4.19",
     "node-fetch": "^2.3.0",
-    "colors": "1.3.3",
+    "chalk": "^2.4.2",
     "moment": "^2.24.0",
     "get-image-colors": "^2.0.0",
     "celebrate": "^9.1.0",
     "dotenv": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
     "body-parser": "^1.18.3",
-    "bcrypt": "^3.0.6"
+    "bcrypt": "^3.0.6",
+    "typegoose": "^5.6.0"
   },
   "devDependencies": {
     "@types/node": "^11.13.4",
