--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "private": true,
   "scripts": {
-    "start": "cd ./dist && node app.js",
-    "dev": "cd ./dist && nodemon app.js"
+    "start": "node dist/app.js",
+    "dev": "cd ./dist && nodemon app.js ",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
@@ -22,7 +23,7 @@
     "dotenv": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
     "body-parser": "^1.18.3",
-    "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "typegoose": "^5.6.0"
   },
   "devDependencies": {
@@ -30,7 +31,8 @@
     "@types/express": "^4.16.1",
     "@types/mongoose": "^5.3.26",
     "@types/moment": "^2.13.0",
-    "@types/joi": "^14.3.2"
+    "@types/joi": "^14.3.2",
+    "typescript": "^3.4.3"
   },
   "_moduleAliases": {
     "@models": "dist/models",
