--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "module-alias": "^2.2.0",
-    "mongoose": "^5.7.5",
-    "chalk": "^2.4.2",
-    "moment": "^2.24.0",
-    "get-image-colors": "^2.0.0",
-    "celebrate": "^9.1.0",
-    "dotenv": "^7.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "body-parser": "^1.18.3",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
-    "typegoose": "^5.6.0",
-    "axios": "^0.18.1"
+    "body-parser": "^1.18.3",
+    "celebrate": "^9.1.0",
+    "chalk": "^2.4.2",
+    "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
+    "express": "^4.16.4",
+    "get-image-colors": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "module-alias": "^2.2.0",
+    "moment": "^2.24.0",
+    "mongoose": "^5.7.5",
+    "typegoose": "^5.6.0"
   },
   "devDependencies": {
     "@types/node": "^11.13.4",
